# binance-bot

./: .env.example  .env.template  .gitignore  .pre-commit-config copy.yaml  .pre-commit-config.yaml  CLAUDE.md  CONVERSATION_SUMMARY.md  PROJECT_OVERVIEW_AND_NEXT_STEPS copy.md  PROJECT_OVERVIEW_AND_NEXT_STEPS.md  PROJECT_STATUS.md  PR_BODY.md  README.md  config.example.py  design_document.md  development_roadmap.md  pyproject copy.toml  pyproject.toml  requirements.txt  requirements_analysis.md  risk_management.md  setup_dev_environment.py  strategy_analysis.md  test_environment.py  uv_setup.md
.cursor copy/rules/: 000-main-rules.mdc  001-code-style-python.mdc  006-api-evolution-tracking.mdc  007-testing-and-quality-visualization.mdc  008-change-tracking-mandatory.mdc  011-phased-development-testing.mdc
.cursor/rules/: 000-main-rules.mdc  001-code-style-python.mdc  002-documentation-simple.mdc  002-documentation.mdc  003-security.mdc  004-pr-process-comprehensive.mdc  005-change-impact-tracking.mdc  006-api-evolution-tracking.mdc  007-testing-and-quality-visualization.mdc  008-change-tracking-mandatory.mdc  009-git-branch-protection.mdc  010-trading-bot-specific.mdc  011-phased-development-testing.mdc
.github/workflows/: ci.yaml  validate-docs.yml
docs/: CHANGELOG.md  CLOUD_SERVICES_LIMITS.md  DATABASE_IMPROVEMENTS.md  DEVELOPMENT_WORKFLOW.md  ENVIRONMENT_SETUP.md  ENVIRONMENT_TEMPLATE.md  NEXT_STEPS_PHASE_1.md  PHASE_1_2_PLAN.md  PHASE_1_3_TESTING_GUIDE.md
docs copy/: DATABASE_IMPROVEMENTS.md  ENVIRONMENT_SETUP.md  NEXT_STEPS_PHASE_1.md  PHASE_1_2_PLAN.md  PHASE_1_3_TESTING_GUIDE.md
docs copy/architecture/: DATA_PIPELINE_ARCHITECTURE.md
docs/api/: GRID_TRADING.md  ORDER_MANAGEMENT.md
docs/architecture/: DATA_PIPELINE_ARCHITECTURE.md
scripts/: .env.example  __init__.py  r2_credential_setup.py  setup_dev_environment.py  setup_phase_1_3.py  test_api_connection.py  test_config_update.py  test_data_pipeline.py  test_environment.py  test_redis_connection.py
scripts copy/: __init__.py  setup_phase_1_3.py  test_api_connection.py  test_config_update.py  test_redis_connection.py
src/: __init__.py  main.py
src copy/: __init__.py
src copy/api/: __init__.py  binance_client.py  models.py
src copy/core/: __init__.py
src copy/strategies/: __init__.py  signal_generator.py
src copy/utils/: logging.py
src/api/: __init__.py  binance_client.py  exceptions.py  models.py  rate_limiter.py
src/backtest/: __init__.py  runner.py
src/core/: config.py  constants.py  environment.py
src/data/: __init__.py  connection_managers.py  database_schema.py  market_data_pipeline.py
src/risk/: __init__.py
src/strategies/: signal_generator.py  technical_analysis.py
src/trading/: __init__.py  exceptions.py  grid_calculator.py  grid_manager.py  grid_models.py  order_manager.py  order_models.py  order_validator.py  position_tracker.py
src/utils/: logging.py
tests copy/integration/: test_api_integration.py
tests copy/unit/: test_config.py  test_technical_analysis.py
tests/backtest/: test_runner.py
tests/integration/: __init__.py  conftest.py  test_api_integration.py  test_data_pipeline.py  test_signal_generation.py
tests/unit/: test_api_client_mock.py  test_config.py  test_grid_calculator.py  test_grid_manager.py  test_grid_models.py  test_order_manager.py  test_order_models.py  test_order_validator.py  test_position_tracker.py  test_technical_analysis.py
